@@ -1,3 +1,6 @@
+2019-07-02 Sergey Kashyrin <ska@kiska.net>
+	* Fix for DISCONNECT - Cleanup everything correctly
+
 2019-02-26 Sergey Kashyrin <ska@kiska.net>
 	* Attempt to implement EXEC SQL CALL for stored procedures
 
